:iphone: fix: fix menu responsiveness on mobile

--- a/src/components/layouts/menu/menu.module.css
+++ b/src/components/layouts/menu/menu.module.css
@@ -49,6 +49,12 @@
   .menu {
     justify-content: center;
 
+    .options {
+      .option {
+        padding: 0 10px;
+      }
+    }
+
     .logomenu {
       display: none;
     }
